--- a/branding/css/spacewalk-theme.less
+++ b/branding/css/spacewalk-theme.less
@@ -77,10 +77,10 @@ p {
 	.make-row(0);
 	min-height: 100%;
 	aside {
-		.make-xs-column(2);
+		.make-md-column(2);
 	}
 	section {
-		.make-xs-column(10);
+		.make-md-column(10);
 	}
 }
 
