revert accidentaly pushed commits
Revert "test toggling"
This reverts commit 9b489d24897bbef1d628eb3d79a26081ff872112.
Revert "back"
This reverts commit ad8f40ff0d72157d6053d0d16af39a2f7a95238b.
Revert "padding on all widths"
This reverts commit 70cd0bc565c5acaa3064716e04df2d251f302aa6.
Revert "float left menu on smaller screens"
This reverts commit 8a3b4ecc63aeb28dd243d1488865e400f639136b.
Revert "test not making sidenav horizontal"
This reverts commit 15e96abd0d459195a7f492c4c7dc54323fbc957d.
Revert "test not making aside horizontal"
This reverts commit f34be35014e37bb80b379f724310055900dd0275.

--- a/branding/css/spacewalk-responsive-rules.less
+++ b/branding/css/spacewalk-responsive-rules.less
@@ -176,6 +176,8 @@
 }
 //classes that will take effect on tablets and mobiles screens
 @media (max-width: @screen-tablet) {
+	.sidenav-horizontal;
+	.aside-horizontal;
 	.header-responsive;
 	.columns-no-padding;
 	.legal-text-footer;
