--- a/java/code/webapp/WEB-INF/pages/common/fragments/systems/group_listdisplay.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/systems/group_listdisplay.jspf
@@ -94,8 +94,7 @@
 <rl:csv dataset="pageList"
                 name="groupList"
                 exportColumns="id, name, groupAdmins, serverCount" />
-<div class="text-right">
-  <hr />
+<div class="pull-left">
         <input class="btn btn-default" type="submit" name="union" value="${rhn:localize('grouplist.jsp.union')}" />
         <input class="btn btn-default" type="submit" name="intersection" value="${rhn:localize('grouplist.jsp.intersection')}" />
 </div>
