--- a/java/code/webapp/WEB-INF/pages/common/fragments/user/edit_address_form.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/user/edit_address_form.jspf
@@ -1,64 +1,64 @@
 <div class="form-group">
-    <label class="col-lg-3 control-label">
+    <label class="col-sm-3 control-label">
         <rhn:required-field key="edit_address.jsp.phone"/>:
     </label>
-    <div class="col-lg-6">
+    <div class="col-sm-6">
         <html:text size="14" property="phone" styleClass="form-control"/>
     </div>
 </div>
 
 <div class="form-group">
-    <label class="col-lg-3 control-label">
+    <label class="col-sm-3 control-label">
         <bean:message key="edit_address.jsp.fax"/>:
     </label>
-    <div class="col-lg-6">
+    <div class="col-sm-6">
         <html:text size="14" property="fax" styleClass="form-control"/>
     </div>
 </div>
 
 <div class="form-group">
-    <label class="col-lg-3 control-label">
+    <label class="col-sm-3 control-label">
         <rhn:required-field key="edit_address.jsp.address"/>:
     </label>
-    <div class="col-lg-6">
+    <div class="col-sm-6">
         <html:text size="30" property="address1" styleClass="form-control"/><br />
         <html:text size="30" property="address2" styleClass="form-control"/>
     </div>
 </div>
 
 <div class="form-group">
-    <label class="col-lg-3 control-label">
+    <label class="col-sm-3 control-label">
         <rhn:required-field key="edit_address.jsp.city"/>:
     </label>
-    <div class="col-lg-6">
+    <div class="col-sm-6">
         <html:text size="20" property="city" styleClass="form-control"/>
     </div>
 </div>
 
 <div class="form-group">
-    <label class="col-lg-3 control-label">
+    <label class="col-sm-3 control-label">
         <rhn:required-field key="edit_address.jsp.state"/>:
     </label>
-    <div class="col-lg-6">
+    <div class="col-sm-6">
         <html:text size="20" property="state" styleClass="form-control"/><br/>
         <bean:message key="edit_address.jsp.staterequired"/>
     </div>
 </div>
 
 <div class="form-group">
-    <label class="col-lg-3 control-label">
+    <label class="col-sm-3 control-label">
         <rhn:required-field key="edit_address.jsp.zipcode"/>:
     </label>
-    <div class="col-lg-6">
+    <div class="col-sm-6">
         <html:text size="14" property="zip" styleClass="form-control"/>
     </div>
 </div>
 
 <div class="form-group">
-    <label class="col-lg-3 control-label">
+    <label class="col-sm-3 control-label">
         <rhn:required-field key="edit_address.jsp.country"/>:
     </label>
-    <div class="col-lg-6">
+    <div class="col-sm-6">
         <html:select property="country" styleClass="form-control">
             <html:options collection="availableCountries"
                           property="value"
