spacewalk-theme.less: bottom-margin to section tag

--- a/branding/css/spacewalk-theme.less
+++ b/branding/css/spacewalk-theme.less
@@ -481,6 +481,7 @@ h1, h2, h3, h4, h5, h6 {
 
 	.spacewalk-list-top-addons {
 		.make-row(0);
+		margin-bottom: 0.5em;
 		.spacewalk-list-alphabar {
 			.make-md-column(9);
 			.text-left;
