inline input class

--- a/branding/css/spacewalk-inputs.less
+++ b/branding/css/spacewalk-inputs.less
@@ -13,3 +13,8 @@
 	vertical-align: bottom;
 	margin: 0 .2em;
 }
+.form-input-inline {
+  display: inline;
+  vertical-align: middle;
+  width: auto;
+}
