button position fix

--- a/java/code/webapp/WEB-INF/pages/common/fragments/errata/ownedlistdisplay.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/errata/ownedlistdisplay.jspf
@@ -34,7 +34,7 @@
 
     </rl:list>
 
-    <div class="text-right">
+    <div class="pull-left">
         <button type="submit"
                name="dispatch"
                class="btn btn-default">
