1069155 - let system set manager csv contain add-on entitlements

--- a/java/code/webapp/WEB-INF/pages/common/fragments/systems/system_listdisplay.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/systems/system_listdisplay.jspf
@@ -179,7 +179,7 @@
 	<c:if test = "${empty noCsv}">
 	<rl:csv dataset="pageList"
 	        name="systemList"
-	        exportColumns="name,id,securityErrata,bugErrata,enhancementErrata,outdatedPackages,lastCheckin,entitlement,channelLabels"/>
+	        exportColumns="name,id,securityErrata,bugErrata,enhancementErrata,outdatedPackages,lastCheckin,entitlementLevel,channelLabels"/>
 	</c:if>
     <rhn:csrf />
 	<rhn:submitted/>
