Fix button style on locale settings
Allow rhn:submit to set styleClass as it inherits from a class that does.
Use btn-primary as default, as it will be the case with most forms.

(For now this rhn:submit is only used in two pages)

Conflicts:
	java/code/webapp/WEB-INF/pages/common/fragments/user/localepreferences.jspf

--- a/java/code/webapp/WEB-INF/pages/common/fragments/user/localepreferences.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/user/localepreferences.jspf
@@ -6,7 +6,7 @@
   </div>
   <div class="panel-body">
     <p><bean:message key="preferences.jsp.datestimes"/></p>
-    <div class="row-0">
+    <div class="form-group">
       <div class="col-md-2">
         <bean:message key="preferences.jsp.displaytimesas"/>
       </div>
@@ -16,6 +16,11 @@
           property="value"
           labelProperty="display" />
         </html:select>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-md-offset-2 col-md-10">
+        <rhn:submit valueKey="preferences.jsp.submitvalue"/>
       </div>
     </div>
   </div>
